--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,6 +21,7 @@ body {
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
 
 code {
