--- a/frontend/src/components/Layout/style.module.css
+++ b/frontend/src/components/Layout/style.module.css
@@ -11,17 +11,20 @@ a.active {
 
 nav {
     position: fixed;
-    top: 0;
+    top: -150px;
     left: 0;
     width: 100%;
     padding: 1.5rem 0;
     background-color: #ffffff55;
     box-shadow: black;
-    transition: padding .3s ease-in-out;
+    transition: padding .3s ease-in-out, opacity .5s ease-in-out, top .5s ease-in-out;
+    opacity: 1;
 }
 
 nav.scrolled {
     padding: 2rem 0;
+    opacity: 1;
+    top: 0;
 }
 
 nav .container .row {
