--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,6 @@ ul {
 
 a {
   text-decoration: none;
-  color: black;
   transition: color 0.3s ease-in-out;
 }
 
@@ -27,4 +26,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button {
+  border: none;
+  outline: none;
+  background: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
 }
