--- a/frontend/src/components/Home/Home.module.css
+++ b/frontend/src/components/Home/Home.module.css
@@ -17,7 +17,7 @@ section {
 }
 
 .MapSection {
-    background-color: lightseagreen;
+    background-color: #222222;
     padding-top: 7.5rem;
     padding-bottom: 1rem;
     display: flex;
