--- a/frontend/src/components/Home/_components/MapSectionComponent/MapSectionComponent.module.css
+++ b/frontend/src/components/Home/_components/MapSectionComponent/MapSectionComponent.module.css
@@ -1,13 +1,28 @@
 .AutocompleteContainer {
-    width: 50%;
+    width: 80%;
     min-width: 500px;
-    max-width: 1000px;
     display: flex;
+    gap: 10px;
 }
 
 .modeToggle {
-    background: #fff;
-    border: 2px solid black;
-    font-size: 1rem;
+    background: #ffffff;
+    min-width: 150px;
+    height: 50px;
+    top: 105%;
+    opacity: 1;
+    font-size: 16px;
+    color: #000000;
+    box-shadow: 3px 0 36px rgba(30, 30, 30, 0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
+}
+
+.modeToggle:hover,
+.modeToggle:focus {
+    background: #252525;
+    color: #fff;
+    opacity: 1;
 }
