worked on mutliplelanguage translation, image upload modal component

--- a/frontend/src/components/Home/_components/MapSectionComponent/MapSectionComponent.module.css
+++ b/frontend/src/components/Home/_components/MapSectionComponent/MapSectionComponent.module.css
@@ -26,3 +26,14 @@
     color: #fff;
     opacity: 1;
 }
+
+.selected {
+    background: orange;
+}
+
+.selected:hover,
+.selected:focus {
+    background: orange;
+    color: #fff;
+    opacity: 1;
+}
