--- a/frontend/src/components/Home/_components/ParalaxSectionComponent/style.module.css
+++ b/frontend/src/components/Home/_components/ParalaxSectionComponent/style.module.css
@@ -6,8 +6,9 @@ section {
 section h2 {
     position: relative;
     color: #fff;
-    font-size: 12rem;
+    font-size: calc(10vw);
     z-index: 999;
+    
 }
 
 section .layer {
