--- a/frontend/src/components/Layout/Layout.module.css
+++ b/frontend/src/components/Layout/Layout.module.css
@@ -51,9 +51,20 @@ nav .container .row {
     align-items: center;
 }
 
-nav .container .row .logo {
-    font-size: 2rem;
+.logo {
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    font-size: 2.5rem;
+    font-weight: 900;
+    color: white;
+    cursor: pointer;
+}
 
+.logo img {
+    height: 50px;
 }
 
 nav .container .row .menu_bar {
