--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+/* 
+GLOBAL styles
+*/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-size: 16px;
+}
+
+/* 
+Body/HTML styles
+*/
+body {
+  padding: 0;
+  margin: 0;
+  background: #000;
+  font-family: "Poppins", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
+  background-size: cover;
+  background-position: center top;
+}
+
+body,
+html {
+  width: 100%;
+  min-width: 1440px;
+  height: 600px;
+  min-height: 100%;
+  max-height: 1080px;
+  background: #282828;
+}
+
+/* 
+Others
+*/
+
+body,
+button,
+input,
+textarea {
+  color: #62a1c9;
+}
+
+body,
+html,
+iframe,
+img {
+  border: 0;
 }
 
 ul {
@@ -16,19 +62,6 @@ a {
   transition: color 0.3s ease-in-out;
 }
 
-body {
-  margin: 0;
-  font-family: "Poppins", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 button {
   border: none;
   outline: none;
@@ -36,4 +69,44 @@ button {
   padding: 0;
   margin: 0;
   cursor: pointer;
+}
+
+/* 
+Font family
+*/
+
+@font-face {
+  font-family: 'GHEAGpalatBld';
+  src: url('fonts/GHEAGpalatBld.otf') format('opentype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'GHEAGrapalatBlit';
+  src: url('fonts/GHEAGrapalatBlit.otf') format('opentype');
+  font-weight: bold;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'GHEAGrapalatRit';
+  src: url('fonts/GHEAGrapalatRit.otf') format('opentype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'GHEAGrpalatReg';
+  src: url('fonts/GHEAGrpalatReg.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: 'GHEAGrpalatReg', sans-serif;
+}
+
+h1 {
+  font-family: 'GHEAGpalatBld', sans-serif;
 }
